--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <h2 id="History">The Evolution of Stone Sour</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis atque consequuntur eligendi sequi maxime, eos necessitatibus architecto illum. Necessitatibus est mollitia aliquid minima blanditiis voluptates cumque iste error repudiandae explicabo!</p>
             <h3>The Beginning</h3>
-            <p>How they started</p>
+            <p>According to Wikipedia Stone Sour was founded by Corey Taylor and Joel Ekman who took their bands name from a coctail menu at one of their local bars. The rest is history</p>
             <h3>Where They Are Now</h3>
+            <p>Currently Stone Sour is on an indefinite hiatus which came after their last album Hydrograd. Band members are currently doing individual work. </p>
     <section>
         <h2 id="Members">Band Members</h2>
             <ul>
@@ -38,7 +39,7 @@
             </ul>
             <Aside>
                 <h2>Personal Struggles</h2>
-                <p>Failed marages and struggles staying sober/alive</p>
+                <p>The lead singer and founder Corey Taylor had struggled personally although through his work not only with Stone Sour but also with his other bands. Failed marraiges, struggles staying sober and mental health issues have been a persistent issue.</p>
             </Aside>
         </section>
         <section>
